# ceo-adapt-vqe

./: .gitignore  README.md  pyproject.toml  tensor_notes.md
adaptvqe/: __init__.py  chemistry.py  circuits.py  convert.py  hamiltonians.py  matrix_tools.py  minimize.py  molecules.py  op_conv.py  pools.py  tensor_helpers.py  test_conversions.py  test_gradients.py  test_mps.py  test_pools.py  test_state_fidelities.py  test_tensors.py  utils.py
adaptvqe/algorithms/: __init__.py  adapt_data.py  adapt_vqe.py  uccsd_vqe.py
examples/: DVE-CEO.py  DVE_CEO.py  DVG-CEO.py  DVG_CEO.py  DVG_CEO_LNN_FSwaps.py  DVG_CEO_LNN_Qiskit.py  DVG_CEO_LNN_Swaps.py  MVP_CEO.py  OVP_CEO.py  QE.py  QE_LNN_Qiskit.py  QE_LNN_Swaps.py  Qubit.py  XXZ_Hamiltonian.py  adapt_isqd.ipynb  adapt_isqd_hubbard.ipynb  adapt_isqd_tn.ipynb  adapt_isqd_xxz.ipynb  adapt_isqd_xxz_noisy.ipynb  circuit_checks.py  example_fe_qe_circuits.py  hydrogen_chains.py  isqd.ipynb  mpo_mockup.py  qiskit_parameterized.ipynb  tn_64_qubits.ipynb  tn_64_qubits.py  tn_64_qubits_plot.ipynb  tn_DVE_CEO.py  tn_build_ckts.py  tn_expm_timing.ipynb  tn_large_molecule.py  tn_stress_test.ipynb  tn_tiled_pool.py  tn_xxz_energy_vs_bond.ipynb  tn_xxz_hamiltonian.py  tn_xxz_large_tiled_pool.py  tn_xxz_profile.py  tn_xxz_tiled_pool.py
examples/CEO/: DVE_CEO.py  DVG_CEO.py  DVG_CEO_LNN_FSwaps.py  MVP_CEO.py  OVP_CEO.py
examples/Circuits/: XXZ_Circuits.py  XXZ_exact_sim.py  XXZ_iteration_circuits.py
examples/Co-ADAPT/: QE_LNN_Swaps.py
examples/QE_Pool/: QE.py
examples/Qubit_Pool/: Qubit.py
examples/Tensor_Networks/: tn_DVE_CEO.py  (+3 more)
(+8 files in other folders)
