[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptvqe"
version = "0.0.1"
authors = [
  { name="Mafalda Ramôa", email="mafalda@vt.edu" },
]
description = "Simulation code for ADAPT-VQE with CEO pools and Hessian recycling."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "scipy",
    "openfermion",
    "pyscf",
    "openfermionpyscf",
    "qiskit[visualization]"
]

[project.urls]
repository = "https://github.com/mafaldaramoa/ceo-adapt-vqe"
